--- a/build
+++ b/build
@@ -3,9 +3,9 @@
 workspace_dir=$1
 output_dir=$2
 
-curl -O http://example.com/foo.tgz -s -o - | tar zxf
-
-cd foo
-./configure --prefix=$output_dir
+git clone git@github.com:nickelaway/pigz.git
+cd pigz
 make
-make install
+
+cp ./pigz $2/pigz
+cp ./unpigz $2/unpigz
